# aoc-2023

./: Cargo.toml
.github/workflows/: rust.yml
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  main.rs
tasks/day_03/: example2_in  example3_in  example4_in  example5_in  example5_out
uiua/: 1.in  1.ua
